Reenable Tabdragging tests failing because of IsWindowPositionManaged()

It used to be exiting the move loop and clearing the move_loop_widget_ before
EndDrag() had a chance to set the window position to manageable again.

This CL adds a maximized browser window waiter, and moves setting the window
position managed logic to ash.

BUG=626761, 331924
TEST=interactive_ui_tests --gtest_filter=TabDragging*

Review-Url: https://codereview.chromium.org/2494713003
Cr-Commit-Position: refs/heads/master@{#435638}